Fix InputStream errors (java8)
During development, a java8 incompatible method was used to read all
bytes from an InputStream. This issue was now resolved.